Oppdatert jacoco, fjernet redundante argumenter, test rapporter